--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,10 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "ext-bcmath": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "ext-bcmath": "*",
+        "friendsofsymfony/rest-bundle": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "league/tactician-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
@@ -19,6 +20,7 @@
         "symfony/orm-pack": "*",
         "symfony/process": "*",
         "symfony/security-bundle": "*",
+        "symfony/serializer": "*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "*",
