--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,6 +42,9 @@ services:
     app.currency_exchange_rate_service:
         class: App\Service\CurrencyExchangeRate
 
+    app.currency_exchange_rate_query_service:
+        class: App\Service\CurrencyExchangeRateQuery
+
     ## Command bus
     app.api.download_current_exchange_rates:
         class: App\CommandBus\Handlers\DownloadCurrentCurrencyExchangeRatesHandler
@@ -54,7 +57,7 @@ services:
         class: App\CommandBus\Handlers\CalculateAverageExchangeRatesHandler
         arguments:
             - '@app.average_exchange_currency_rates_calculator'
-            - '@app.currency_exchange_rate_service'
+            - '@app.currency_exchange_rate_query_service'
         tags:
             - { name: tactician.handler, typehints: true }
 
@@ -62,5 +65,6 @@ services:
         class: App\CommandBus\Handlers\IncrementCurrentExchangeRateComputedCountHandler
         arguments:
             - '@app.currency_exchange_rate_service'
+            - '@app.currency_exchange_rate_query_service'
         tags:
             - { name: tactician.handler, typehints: true }
