--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,8 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> REDIS ###
+REDIS_HOST=redis
+REDIS_PORT=6379
+###< REDIS ##$
