--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "friendsofsymfony/rest-bundle": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "league/tactician-bundle": "^1.1",
+        "predis/predis": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
         "symfony/console": "*",
