--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -15,6 +15,7 @@ framework:
         log: true
 
     cache:
+
         # Put the unique name of your app here: the prefix seed
         # is used to compute stable namespaces for cache keys.
         #prefix_seed: your_vendor_name/app_name
@@ -23,8 +24,8 @@ framework:
         # Other options include:
 
         # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
+        app: cache.adapter.redis
+        default_redis_provider: "redis://%redis.host%:%redis.port%"
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
