WIP Second level cache partially working

--- a/.env.dist
+++ b/.env.dist
@@ -27,3 +27,8 @@ MAILER_URL=null://localhost
 REDIS_HOST=redis
 REDIS_PORT=6379
 ###< REDIS ##$
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://localhost
+###< snc/redis-bundle ###
