--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
         "ext-bcmath": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.9",
+        "doctrine/orm": "^2.6",
         "friendsofsymfony/rest-bundle": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "league/tactician-bundle": "^1.1",
         "predis/predis": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "snc/redis-bundle": "^2.1",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
