--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -24,8 +24,8 @@ framework:
         # Other options include:
 
         # Redis
-        app: cache.adapter.redis
-        default_redis_provider: "redis://%redis.host%:%redis.port%"
+#        app: cache.adapter.redis
+#        default_redis_provider: "redis://%redis.host%:%redis.port%"
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
